--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.2",
     "nodemon": "^3.0.1",
+    "util": "^0.12.5",
     "yup": "^1.2.0"
   }
 }
