--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,14 @@
 {
-  "builds": [{ "src": "*.js", "use": "@vercel/node" }]
+  "version": 2,
+  "builds": [{ "src": "*.js", "use": "@vercel/node" }],
+  "routes": [
+    {
+      "src": "/api/v1/(.*)",
+      "dest": "index.js"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/"
+    }
+  ]
 }
